--- a/templates/_sections/home/counters.html.twig
+++ b/templates/_sections/home/counters.html.twig
@@ -1,4 +1,4 @@
-<div style="background: #FFF url('{{ asset('build/images/dots.png') }}') 170% 0% no-repeat; background-size: 60% auto">
+<div class="section" style="background: #FFF url('{{ asset('build/images/dots.png') }}') 170% 0% no-repeat; background-size: 60% auto">
 
     <div class="container">
         <div class="row justify-content-between">
