--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,8 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends '_layout/bg-video.html.twig' %}
 
 {# Config #}
 
-{% set whiteLogo = true %}
+{% block title %}Page not found{% endblock %}
+
 {% set referer = app.request.server.get('http-referer') %}
 {% set goBackLink = referer|default(path('home')) %}
 {% set goBackLabel = referer is null 
@@ -13,42 +14,18 @@
 
 {# Error 404 page ====================================================== #}
 
-{% block title %}Page not found{% endblock %}
+{% block content %}
 
-{% block javascripts %}
-	{{ parent() }}
-    {{ encore_entry_script_tags('video') }}
-{% endblock %}
+<div class="dark error404-wrap text-center">
+	<div class="error404">404</div>
 
-{% block main %}
+	<div class="heading-block border-bottom-0">
+		<h4>Ooopps! The Page you were looking for, couldn't be found.</h4>
+	</div>
 
-	<section class="slider-element min-vh-60 min-vh-md-100 dark error404-wrap include-header">
-		<div class="slider-inner">
-
-			<div class="vertical-middle">
-				<div class="container text-center py-5 py-md-0">
-
-					<div class="error404">404</div>
-
-					<div class="heading-block border-bottom-0">
-						<h4>Ooopps.! The Page you were looking for, couldn't be found.</h4>
-					</div>
-
-					<a href="{{ goBackLink }}" class="button button-large button-rounded nott fw-light">
-						<span>{{ goBackLabel|raw }}</span>
-					</a>
-
-				</div>
-			</div>
-
-			<div class="video-wrap">
-				<video poster="{{ asset('build/images/videos/deskwork.jpg') }}" preload="auto" loop autoplay muted>
-					<source src='{{ asset('build/images/videos/deskwork.mp4') }}' type='video/mp4' />
-					<source src='{{ asset('build/images/videos/deskwork.webm') }}' type='video/webm' />
-				</video>
-				<div class="video-overlay" style="background-color: rgba(0,0,0,0.3);"></div>
-			</div>
-
-		</div>
-	</section>
+	<a href="{{ goBackLink }}" class="button button-large button-rounded nott fw-light">
+		<span>{{ goBackLabel|raw }}</span>
+	</a>
+</div>
+				
 {% endblock %}
