--- a/templates/coding_language/lessons.html.twig
+++ b/templates/coding_language/lessons.html.twig
@@ -1,23 +1,39 @@
-{% extends 'base.html.twig' %}
+{% extends '_layout/collection.html.twig' %}
 
-{% block title %}
-	{{ codingLanguage.label ~ ' Lessons' }}
+{% block title %}{{ codingLanguage.label ~ ' Lessons' }}{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+	{{ encore_entry_script_tags('slider') }}
 {% endblock %}
 
-{% block body %}
+{% set breadcrumb = [
+    {label: 'Home', url: '/'},
+    {label: 'Lessons', url: path('lessons')},
+	{label: codingLanguage.label, active: true}
+] %}
+{% set collection_filters = categories %}
+{% set collection_items = lessons %}
 
-	<h1>{{ codingLanguage.label ~ ' Lessons' }}</h1>
 
-	<div class="collection">
+{# Collection of Projects =============================================== #}
 
-		{% for lesson in lessons %}
-			{% include "_parts/card/lesson.html.twig" %}
-		{% endfor %}
+{% block hero %}
 
-		<div class="pagination">
-			{{ knp_pagination_render(lessons) }}
-		</div>
-
-	</div>
-
+    {% include "_sections/page-title/default.html.twig" with { 
+        title: 'Lessons: ' ~ codingLanguage.label,
+        subtitle: null
+    } %}
+    
 {% endblock %}
+
+{% block content %}
+    
+    <div id="collection" class="row grid-container">
+        {% for lesson in lessons %}
+            {% include "_elements/lesson-collection-item.html.twig" %}
+        {% endfor %}
+    </div>
+    
+{% endblock %}
+
