--- a/templates/project/show.html.twig
+++ b/templates/project/show.html.twig
@@ -36,6 +36,7 @@
 {% set showRelatedProjects = true %}
 {% set showProjectNavigation = true %}
 {% set prevNextLinks = prevNextLinks %}
+{% set author_routeName = 'author_projects' %}
 
 
 {# Show one Project ================================================================== #}
