--- a/templates/_sections/page-title/lesson-show.html.twig
+++ b/templates/_sections/page-title/lesson-show.html.twig
@@ -13,11 +13,11 @@
         - author_routeName: <string|null> Route name for the author collection of lessons (set in 'show' template)
 #}
 
-{% set dateFormated = post.createdAt|date('M j, Y') %}
-{% set animation = 'fadeInUp' %}
-{% set shapeDivider = 'slant' %} {# Browse shapes: https://themes.semicolonweb.com/html/canvas/shape-dividers.html #}
-{% set shapeDividerReverse = true %}
-{% set h2LineHeight = '3.2rem' %}
+    {% set dateFormated = post.createdAt|date('M j, Y') %}
+    {% set animationDuration = '600ms' %}
+    {% set shapeDivider = 'slant' %} {# Browse shapes: https://themes.semicolonweb.com/html/canvas/shape-dividers.html #}
+    {% set shapeDividerReverse = true %}
+    {% set h2LineHeight = '3.2rem' %}
 
 
 {# Prepare #}
@@ -27,8 +27,7 @@
     {% set authorCollectionUrl = hasAuthorLink ? path(author_routeName, {id: post.author.id}) %}
     
     {# design #}
-    {% set animationClass = animation is defined ? ' ' ~ animation ~ ' animated' : '' %}
-    {% set animationAttr = animation is defined ? ' data-animate="' ~ animation ~ '"' : '' %}
+    {% set animationDurationAttr = animationDuration is defined ? ' style="animation-duration: ' ~ animationDuration ~ '"' : '' %}
     {% set shapeDividerExtraClass = shapeDividerReverse is defined and shapeDividerReverse is same as(true) ? ' reverse' : '' %}
 
 
@@ -37,17 +36,18 @@
 <section id="page-title" class="page-title-pattern">
 
     <div class="container clearfix">
-
-        <div class="small {{ animationClass }}"{{ animationAttr }}{# data-delay="200" #}{# style="animation-duration: 600ms" #}>
             
-            {% if breadcrumb is defined %}
+        {% if breadcrumb is defined %}
+            <div class="small fadeInDown animated" data-animate="fadeInDown"{{ animationDurationAttr }}>
                 {% include "_elements/breadcrumb.html.twig" with {
                     links: breadcrumb
                 } %}
-            {% endif %}
+            </div>
+        {% endif %}
 
+        <div class="fadeInUp animated" data-animate="fadeInUp"{{ animationDurationAttr }}>
             <h2 class="fw-bold ls0 mb-3" style="font-size:46px; line-height:{{ h2LineHeight }}" >{{ post.title }}</h2>
-            
+        
             <ol class="page-description">
 
                 <li class="tagcloud clearfix">
@@ -56,7 +56,7 @@
 
                     {% if post.categories|length > 0 %}
                         {% for category in post.categories %}
-                            <a href="{{ path('coding_language_lessons', {'slug': category.slug}) }}">{{ category.label }}</a>
+                            <a href="{{ path('lesson_category', {'slug': category.slug}) }}">{{ category.label }}</a>
                         {% endfor %}
                     {% endif %}
 
@@ -81,7 +81,6 @@
                 {% endif %}
 
             </ol>
-            
         </div>
         
     </div>
