--- a/templates/_sections/page-title/project-show.html.twig
+++ b/templates/_sections/page-title/project-show.html.twig
@@ -12,17 +12,16 @@
             ] %} 
 #}
 
-{% set animation = 'fadeInUp' %}
-{% set shapeDivider = 'slant' %} {# Browse shapes: https://themes.semicolonweb.com/html/canvas/shape-dividers.html #}
-{% set shapeDividerReverse = true %}
-{% set h2LineHeight = '3.2rem' %}
+    {% set animationDuration = '600ms' %}
+    {% set shapeDivider = 'slant' %} {# Browse shapes: https://themes.semicolonweb.com/html/canvas/shape-dividers.html #}
+    {% set shapeDividerReverse = true %}
+    {% set h2LineHeight = '3.2rem' %}
 
 
 {# Prepare #}
 
-{% set animationClass = animation is defined ? ' ' ~ animation ~ ' animated' : '' %}
-{% set animationAttr = animation is defined ? ' data-animate="' ~ animation ~ '"' : '' %}
-{% set shapeDividerExtraClass = shapeDividerReverse is defined and shapeDividerReverse is same as(true) ? ' reverse' : '' %}
+    {% set animationDurationAttr = animationDuration is defined ? ' style="animation-duration: ' ~ animationDuration ~ '"' : '' %}
+    {% set shapeDividerExtraClass = shapeDividerReverse is defined and shapeDividerReverse is same as(true) ? ' reverse' : '' %}
 
 
 {# Title Page section (for Project 'show' templates)======================================================== #} 
@@ -32,12 +31,14 @@
     <div class="container clearfix">
 
         {% if breadcrumb is defined %}
-            {% include "_elements/breadcrumb.html.twig" with {
-                links: breadcrumb
-            } %}
+            <div class="small fadeInDown animated" data-animate="fadeInDown"{{ animationDurationAttr }}>
+                {% include "_elements/breadcrumb.html.twig" with {
+                    links: breadcrumb
+                } %}
+            </div>
         {% endif %}
 
-        <div class="small {{ animationClass }}"{{ animationAttr }}{# data-delay="200" #}{# style="animation-duration: 600ms" #}>
+        <div class="fadeInUp animated" data-animate="fadeInUp"{{ animationDurationAttr }}>
             <h2 class="fw-bold ls0 mb-3" style="font-size:46px; line-height:{{ h2LineHeight }}" >
                 {{ post.title }}
             </h2>
