--- a/templates/author/lessons.html.twig
+++ b/templates/author/lessons.html.twig
@@ -1,17 +1,35 @@
-{% extends 'base.html.twig' %}
+{% extends '_layout/collection.html.twig' %}
 
-{% block title %}
-	{{ author.fullName }}'s Lessons
+{# Config #}
+
+{% block title %}Lessons: {{ author.fullName }}{% endblock %}
+
+{% set page_title = 'Portfolio: ' %}
+{% set breadcrumb = [
+    {label: 'Home', url: path('home')},
+    {label: 'Lessons', url: path('lessons')},
+    {label: author.fullname, active: true}
+] %}
+{% set collection_filters = {double: [codingLanguages, categories]} %}
+
+
+{# Collection of Projects =============================================== #}
+
+{% block hero %}
+
+    {% include "_sections/page-title/default.html.twig" with { 
+        title: 'Lessons: ' ~ author.fullname,
+        subtitle: author.bio|extract(200, '...')
+    } %}
+    
 {% endblock %}
 
-{% block body %}
-
-	<h1>{{ author.fullName }}'s Lessons</h1>
-
-	{% for lesson in lessons %}
-		<div class="collection">
-			{% include "_parts/card/lesson.html.twig" %}
-		</div>
-	{% endfor %}
-
+{% block content %}
+    
+    <div id="collection" class="row grid-container">
+        {% for lesson in lessons %}
+            {% include "_elements/lesson-collection-item.html.twig" %}
+        {% endfor %}
+    </div>
+    
 {% endblock %}
