--- a/templates/author/projects.html.twig
+++ b/templates/author/projects.html.twig
@@ -1,17 +1,41 @@
-{% extends 'base.html.twig' %}
+{% extends '_layout/collection.html.twig' %}
 
-{% block title %}
-	{{ author.fullName }}'s Projects
+{% block javascripts %}
+    {{ parent() }}
+	{{ encore_entry_script_tags('slider') }}
+	{{ encore_entry_script_tags('gallery') }}
 {% endblock %}
 
-{% block body %}
+{# Config #}
 
-	<h1>{{ author.fullName }}'s Projects</h1>
+{% block title %}Portfolio: {{ author.fullName }}{% endblock %}
 
-	{% for project in projects %}
-		<div class="collection">
-			{% include "_parts/card/project.html.twig" %}
-		</div>
-	{% endfor %}
+{% set page_title = 'Portfolio: ' %}
+{% set breadcrumb = [
+    {label: 'Home', url: path('home')},
+    {label: 'Portfolio', url: path('projects')},
+    {label: author.fullname, active: true}
+] %}
+{% set collection_filters = categories %}
 
+
+{# Collection of Projects =============================================== #}
+
+{% block hero %}
+
+    {% include "_sections/page-title/default.html.twig" with { 
+        title: 'Portfolio: ' ~ author.fullname,
+        subtitle: author.bio|extract(200, '...')
+    } %}
+    
+{% endblock %}
+
+{% block content %}
+    
+    <div id="collection" class="portfolio portfolio-reveal row grid-container gutter-30" data-layout="fitRows">
+        {% for project in projects %}
+            {% include "_elements/portfolio-collection-item.html.twig" with {project: project} %}
+        {% endfor %}
+    </div>
+    
 {% endblock %}
