--- a/templates/coding_language/projects.html.twig
+++ b/templates/coding_language/projects.html.twig
@@ -1,23 +1,43 @@
-{% extends 'base.html.twig' %}
+{% extends '_layout/collection.html.twig' %}
 
-{% block title %}
-	{{ codingLanguage.label ~ ' Projects' }}
+{% block title %}{{ codingLanguage.label ~ ' Projects' }}{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+	{{ encore_entry_script_tags('slider') }}
 {% endblock %}
 
-{% block body %}
+{% set breadcrumb = [
+    {label: 'Home', url: '/'},
+    {label: 'Portfolio', url: path('projects')},
+	{label: codingLanguage.label, active: true}
+] %}
+{% set collection_filters = categories %}
+{% set collection_items = projects %}
 
-	<h1>{{ codingLanguage.label ~ ' Projects' }}</h1>
 
-	<div class="collection">
+{# Collection of Projects =============================================== #}
 
-		{% for project in projects %}
-			{% include "_parts/card/project.html.twig" %}
-		{% endfor %}
+{% block hero %}
 
-		<div class="pagination">
-			{{ knp_pagination_render(projects) }}
-		</div>
+    {% include "_sections/page-title/default.html.twig" with { 
+        title: 'Portfolio: ' ~ codingLanguage.label,
+        subtitle: null
+    } %}
+    
+{% endblock %}
 
-	</div>
-
+{% block content %}
+    
+    <div id="collection" class="portfolio portfolio-reveal row grid-container gutter-30" data-layout="fitRows">
+        {% for projects in collection_items %}
+            {% include "_elements/portfolio-collection-item.html.twig" with {
+                project: projects,
+				data: { 
+					categories: true,
+					codingLanguages: false }
+            } %}
+        {% endfor %}
+    </div>
+    
 {% endblock %}
