--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -37,11 +37,90 @@
 			} %}
 
 			{# wrap cards #}
-			{% include "_sections/home/wrap-cards.html.twig" with {
-				section: 'Some of Featured Pictures',
-				title: 'See what I Did.',
-				offsetLeft: true,
-			} %}
+			<div class="section bg-transparent">
+				<div class="container">
+					{% include "_elements/section-title.html.twig" with {
+						section: 'Some of Featured Pictures',
+						title: 'See what I Did.',
+						offsetLeft: true,
+						content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur blanditiis saepe dolore tempora nihil praesentium dolorum unde, earum, nostrum odit?'
+					} %}
+
+					{% include "_elements/gallery-masonry-3d.html.twig" with { cards : [
+						{
+							img: asset('build/images/album/1.jpg'),
+							category: 'Travel',
+							title: 'Railway Station'
+						},{
+							img: asset('build/images/album/2.jpg'),
+							category: 'Travel',
+							title: 'Mt. Batur'
+						},{
+							img: asset('build/images/album/3.jpg'),
+							category: 'Travel',
+							title: 'Bali, Indonesia'
+						},{
+							img: asset('build/images/album/4.jpg'),
+							category: 'Wedding',
+							title: "Ms. Charle's Wedding"
+						},{
+							img: asset('build/images/album/5.jpg'),
+							category: 'Wedding',
+							title: 'Romantic Moments'
+						},{
+							img: asset('build/images/album/6.jpg'),
+							category: 'Travel',
+							title: 'Surfing on Sunset'
+						},{
+							img: asset('build/images/album/7.jpg'),
+							category: 'Candid',
+							title: 'Black & White'
+						},{
+							img: asset('build/images/album/8.jpg'),
+							category: 'Travel',
+							title: 'Reading Book'
+						},{
+							img: asset('build/images/album/9.jpg'),
+							category: 'Travel',
+							title: 'Little Flubby'
+						},{
+							img: asset('build/images/album/10.jpg'),
+							category: 'Portrait',
+							title: 'Model Shoot'
+						},{
+							img: asset('build/images/album/11.jpg'),
+							category: 'Fashion',
+							title: 'Beach Shoot'
+						},{
+							img: asset('build/images/album/12.jpg'),
+							category: 'Model',
+							title: 'Modelling Pics'
+						},{
+							img: asset('build/images/album/13.jpg'),
+							category: 'Travel',
+							title: 'Street Picture'
+						},{
+							img: asset('build/images/album/14.jpg'),
+							category: 'Street',
+							title: 'Budapest, Hungry'
+						},{
+							img: asset('build/images/album/15.jpg'),
+							category: 'Candid',
+							title: 'Street Picture'
+						}
+
+					] } %}
+
+					{% include "_elements/section-paragraph-left.html.twig" with {
+						title: 'See what I Did.',
+						content: [
+							'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur blanditiis saepe dolore tempora nihil praesentium dolorum unde, earum, nostrum odit?',
+							'Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptatum, perspiciatis quae dolorum exercitationem quos ullam, doloribus voluptates nulla reprehenderit maxime sunt ducimus eligendi ratione quaerat vero ex voluptatem earum.'
+						] 
+					} %}
+
+				</div>
+			</div>
 
 			{# counters #}
 			{% include "_sections/home/counters.html.twig" %}
