--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,46 +1,36 @@
-{% extends 'base.html.twig' %}
+{% extends '_layout/bg-video.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Login{% endblock %}
 
-{% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-    <div class="register_link">
-        <span>Don't have an account? </span>
-        <a href="{{ path('author_register') }}">Register</a>
-    </div>
-</form>
+{% block stylesheets %}
+	{{ parent() }}
+	{{ encore_entry_link_tags('ui') }}
 {% endblock %}
+
+{% block content %}
+
+<div class="tabs mx-auto clearfix" id="tab-login-register" style="max-width: 500px;">
+
+    <ul class="tab-nav tab-nav2 center clearfix">
+        <li class="inline-block ui-state-active"><a href="#tab-login">Login</a></li>
+        <li class="inline-block"><a href="{{ path('author_register') }}">Register</a></li>
+    </ul>
+
+    <div class="tab-container">
+
+        <div class="tab-content" id="tab-login">
+            <div class="card">
+                <div class="card-body" style="padding: 40px;">
+
+                    {% include "security/_login-form.html.twig" %}
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+{% endblock %}
+
